samples/_failures_safe/1761698291_5a3c0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ce4ec58.c: In function ‘main’:
./samples/SAFE/__tmp_0ce4ec58.c:164:5: error: expected declaration or statement at end of input
  164 |     if (len > 0 && input[len - 1] == '\n') {
      |     ^~
./samples/SAFE/__tmp_0ce4ec58.c:164:5: error: expected declaration or statement at end of input
